# sisyphus

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  todo.md  two_sum.py
.claude/agents/: ddd-tech-lead.md
.ddd/251210/: dev_log_251210.md
.ddd/251211/: dev_log_251211.md
.ddd/tech_lead/: roadmap.md
.ddd/tech_lead/archive/: README.md
.ddd/tech_lead/current_sprint/: backlog.md  blockers.md
.team/: README.md
SisyphusUI/: Package.swift
config/: system_prompt.md
config/tools/: read_file.yaml  search.yaml  terminal.yaml  write_file.yaml
dashboard/: app.js  index.html  style.css
ddd/: todo.md
ddd/122025/: dev_log_10122025.md
ddd/tech_lead/current_sprint/: completed.md  in_progress.md  sprint_info.md
ddd/tech_lead/daily_reports/: README.md
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  README.md  TOOL_REGISTRATION.md  llm-integration.md
src/agent/: index.ts  llm.ts  registry.ts  task.ts  worker-runner.ts  worker.ts
src/cli/: chat.ts  index.ts
src/daemon/: manager.ts  server.ts
src/shared/: config.ts  constants.ts  notify.ts  types.ts  utils.ts
src/sisyphus/: __init__.py
src/sisyphus/core/: __init__.py  conversation.py  tool.py  tool_call.py
src/sisyphus/execution/: __init__.py  tool_executor.py  tool_orchestrator.py
tests/: __init__.py  conftest.py  test_cli.py  test_conversation.py  test_llm_client.py  test_setup.py  test_tool.py  test_tool_executor.py  test_tool_registry.py  test_tools_command.py
tests/tools/: test_filesystem.py  test_search.py  test_terminal.py  test_tool_integration.py
(+23 files in other folders)
